--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
-  }
+  },
+
+"nodemonConfig": {
+  "restartable": "rs",
+  "delay":0
+}
 }
